--- a/project2/OptE2New.ipynb
+++ b/project2/OptE2New.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -32,7 +36,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -71,7 +79,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Lets first calculate the gradient and the Hessian of the Rosenbrock function.\n",
     "\n",
@@ -93,7 +105,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -103,7 +119,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# initial definition of function and gradients\n",
@@ -142,7 +162,11 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -183,7 +207,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can see. that the Rosenbrock function increases quickly towards the edges of the plot, while having a big deep valley with small values in the area of low values around the minimum.\n",
     "\n",
@@ -193,7 +221,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -236,7 +268,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "In the surface plot we can see the Valley structure and the gradients, note that all of them are normalized, because otherwise the different scales of x,y and the z axes would negate all interpertability from the plot."
    ]
@@ -244,7 +280,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from cProfile import label\n",
@@ -331,7 +371,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can observe the following things:\n",
     "For $stepsizes>0.0075$ we barely converge or even go to $\\infty$, thats why we only look into lower stepsizes.\n",
@@ -343,7 +387,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Now we start with the Newton experiments"
    ]
@@ -351,7 +399,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#basic surface plot\n",
@@ -417,7 +469,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The Newton Method specialises the  descent direction by taking the bending of the curve (Hessian) into account while looking for the best direction, at the same time there is no need for stepsizes (in 2.1 the formula takes stepsizes into account, but the hessian already gives a good indicator for the length of the step which can be seen by taking different stepsizes as in 1.3 (just switch out gradSteo for NewtonStep there)). By this we now only need 3 to 5 steps to reach the minimum from a proper neighbourghhood of the minimum.\n",
     "\n",
