--- a/project2/OptE2New.ipynb
+++ b/project2/OptE2New.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -280,6 +280,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cProfile import label\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -287,9 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "from cProfile import label\n",
-    "import plotly.graph_objects as go\n",
-    "import plotly.express as px\n",
+    "\n",
     "\n",
     "\n",
     "#basic surface plot\n",
@@ -478,6 +487,88 @@
     "The Newton Method specialises the  descent direction by taking the bending of the curve (Hessian) into account while looking for the best direction, at the same time there is no need for stepsizes (in 2.1 the formula takes stepsizes into account, but the hessian already gives a good indicator for the length of the step which can be seen by taking different stepsizes as in 1.3 (just switch out gradSteo for NewtonStep there)). By this we now only need 3 to 5 steps to reach the minimum from a proper neighbourghhood of the minimum.\n",
     "\n",
     "We can observe, that the method takes (if feasible) long steps towards the minimum and only short steps elsewise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now as a last try we want to see how the previous 2 methods work combined: i.e. we are only using newtons method while The Hessian is positive definite, i. e. eigenvalues > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stepSize = 0.00001\n",
+    "\n",
+    "#basic surface plot\n",
+    "x1 = np.linspace(-3, 2.5, 150)\n",
+    "x2 = np.linspace(-3, 3.5, 150)\n",
+    "X, Y = np.meshgrid(x1,x2)\n",
+    "Z = RosenbrockFast(X,Y)\n",
+    "figMixedNewton = go.Figure(data =\n",
+    "    go.Contour(\n",
+    "        z=Z,\n",
+    "        x=x1,\n",
+    "        y=x2,\n",
+    "        colorbar=dict(\n",
+    "            title='f(x)', # title here\n",
+    "            titleside='right',\n",
+    "            titlefont=dict(\n",
+    "                size=14,\n",
+    "                family='Arial, sans-serif')\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "#created via colorRampPalette(brewer.pal(8,\"Set2\"))(30) %>% paste(collapse=\"', '\") in R\n",
+    "colorsMixedNewton = ['#66C2A5', '#8AB594', '#AEA884', '#D29B74', '#F68E64', '#E59077', '#CA9591', '#AF9AAA', '#949EC3', '#9C9CC9', '#B296C7', '#C791C5', '#DD8CC3', '#DE94B3', '#CEA798', '#BEBA7E', '#AECD63', '#AFD850', '#C4D847', '#DAD83E', '#EFD835', '#FDD735', '#F6D24E', '#F0CD66', '#EAC87F', '#E3C395', '#D7BF9C', '#CBBBA4', '#BFB7AB', '#B3B3B3']\n",
+    "\n",
+    "\n",
+    "for j, x0 in enumerate(startPoints):\n",
+    "    path = np.ones((150001, 2))\n",
+    "    path[0] = x0\n",
+    "    for i in range(150000):\n",
+    "        i = i+1\n",
+    "        \n",
+    "        w, v = np.linalg.eigvals(RosenbrockHessian(path[i-1]))\n",
+    "        if all(ev > 0 for ev in w):\n",
+    "            path[i] = NewtonStep(path[i-1], RosenbrockGrad, RosenbrockHessian)\n",
+    "        else:\n",
+    "            print(f\"Took gradient step at startpoint {j} for iteration {i} with eigenvalues {w}\")\n",
+    "            path[i] = gradStep(path[i-1], RosenbrockGrad, stepSize)\n",
+    "        if np.linalg.norm(RosenbrockGrad(path[i])) < 0.001 or np.linalg.norm(path[i]-path[i-1])==0:\n",
+    "            break\n",
+    "    #plotting\n",
+    "    trace = go.Scatter(x=path[:,0],\n",
+    "                       y=path[:,1],\n",
+    "                       mode=\"lines\",\n",
+    "                       line=go.scatter.Line(color=colorsMixedNewton[j]),\n",
+    "                       showlegend=True,\n",
+    "                       name=f\"Example path {j} for stepsize Newton's method\")\n",
+    "    figMixedNewton.add_trace(trace)\n",
+    "    print(f\"We got from {path[0]} to {path[i]} in {i} steps and decreased the value from {Rosenbrock(path[0])} to {Rosenbrock(path[i])} while using teh mixed method\")\n",
+    "    \n",
+    "    \n",
+    "figMixedNewton.update_layout(legend=dict(\n",
+    "    yanchor=\"top\",\n",
+    "    y=-0.05,\n",
+    "    xanchor=\"left\",\n",
+    "    x=0.01,\n",
+    "    orientation = \"h\"\n",
+    "    ),\n",
+    "                  yaxis=dict(\n",
+    "                      title=\"y\"                \n",
+    "                      \n",
+    "                  ),\n",
+    "                  xaxis=dict(\n",
+    "                      title=\"x\"                \n",
+    "                      \n",
+    "                  ))\n",
+    "figMixedNewton.show()"
    ]
   }
  ],
