--- a/pract2_1ok.ipynb
+++ b/pract2_1ok.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "## Gradient descent principles\n",
-        "#### Nils Lennier Matti \\ss Federica Valeau\n",
+        "#### Nils Lennier Mattiß, Federica Valeau and Selea Eduard Mihai\n",
         "### 1. Gradient descent methods\n",
         "During this first part, we will perform the gradient descent method to three different functions, and then we will compare our result to find out in which occasion the gradient descent performs better.\n",
         "\n",
