--- a/pract2_1ok.ipynb
+++ b/pract2_1ok.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "## Gradient descent principles\n",
-        "#### Nils Lennier Mattiß, Federica Valeau and Selea Eduard Mihai\n",
+        "#### Nils Lennier Matti Federica Valeau\n",
         "### 1. Gradient descent methods\n",
         "During this first part, we will perform the gradient descent method to three different functions, and then we will compare our result to find out in which occasion the gradient descent performs better.\n",
         "\n",
@@ -2240,7 +2240,7 @@
         "    for i in range(150000):\n",
         "        i = i+1\n",
         "        \n",
-        "        w, v = np.linalg.eigvals(RosenbrockHessian(path[i-1]))      \n",
+        "        w, v = np.linalg.eig(RosenbrockHessian(path[i-1]))      \n",
         "        if all((ev > 0) for ev in w):\n",
         "            path[i] = NewtonStep(path[i-1], RosenbrockGrad, RosenbrockHessian)\n",
         "        else:\n",
