--- a/project4/practical4.ipynb
+++ b/project4/practical4.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Practical 4. Constrained Optimization: Equality Constraints\n",
+    "\n",
+    "#### Nils Lennier Mattiß, Federica Valeau, Eduard Mihai\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "outputs": [],
@@ -126,7 +140,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Newton Method"
+    "Here we show that the step function works and that it gives correctly the next set of values to be considered"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Newton Method"
    ],
    "metadata": {
     "collapsed": false,
@@ -197,7 +223,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can see that after 100 steps, by using the starting point given in the example our newton method converges to the solution."
+    "We can see that after 100 steps, by using the starting point given in the example our newton method converges to the solution. $(-0.74833549,  0.66332043)$ it's the solution that our algorithm converged to, which is the correct one, with $\\lambda$ being equal -0.21232494"
    ],
    "metadata": {
     "collapsed": false,
@@ -679,7 +705,9 @@
    "cell_type": "markdown",
    "source": [
     "#### Ex3\n",
-    "Merit function"
+    "Merit function\n",
+    "$\\\\$\n",
+    "$M(x_1,x_2) = f(x_1,x_2)+ρh(x_1,x_2)^2$"
    ],
    "metadata": {
     "collapsed": false,
@@ -690,7 +718,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "def grd_M(x):\n",
+    "    g= np.array([3*math.e**(3*x[0])+40*x[0]**3+40*x[0]*x[1]**2-40*x[0], -4*math.e**(-4*x[1])+40*x[1]**3+40*x[1]*x[0]**2-40*x[1]])\n",
+    "    return g\n",
+    "\n",
+    "def grad_desc(x,a=0.01):\n",
+    "    g = grd_M(x)\n",
+    "    normed = g/np.linalg.norm(g)\n",
+    "    return x-a*normed\n",
+    "\n",
+    "\n",
+    "def meritOptimise(start, grd_M, steps, step=0.01):\n",
+    "    x = start\n",
+    "    for c in range(steps):\n",
+    "        x = grad_desc(x, step)\n",
+    "        if np.linalg.norm(grd_M(x)) < 1e-2:\n",
+    "            print(f\"exited after {c} iterations with gradient {grd_M(x)}\")\n",
+    "            break\n",
+    "\n",
+    "    return x"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -736,25 +796,6 @@
     }
    ],
    "source": [
-    "def grd_M(x):\n",
-    "    g= np.array([3*math.e**(3*x[0])+40*x[0]**3+40*x[0]*x[1]**2-40*x[0], -4*math.e**(-4*x[1])+40*x[1]**3+40*x[1]*x[0]**2-40*x[1]])\n",
-    "    return g\n",
-    "\n",
-    "def grad_desc(x,a=0.01):\n",
-    "    g = grd_M(x)\n",
-    "    normed = g/np.linalg.norm(g)\n",
-    "    return x-a*normed\n",
-    "\n",
-    "\n",
-    "def meritOptimise(start, grd_M, steps, step=0.01):\n",
-    "    x = start\n",
-    "    for c in range(steps):\n",
-    "        x = grad_desc(x, step)\n",
-    "        if np.linalg.norm(grd_M(x)) < 1e-2:\n",
-    "            print(f\"exited after {c} iterations with gradient {grd_M(x)}\")\n",
-    "            break\n",
-    "\n",
-    "    return x\n",
     "\n",
     "# test\n",
     "for x in startX:\n",
@@ -776,7 +817,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "As we can see, we are getting pretty close on a lot(more then the Newton like Method before) of solutions and on some of them even pretty close. But in general not as close as with the Newton Method."
+    "As we can see, we are getting pretty close on a lot(more then the Newton like Method before) of solutions and on some of them even pretty close. But in general not as close as with the Newton Method. So the Merit Optimiser can be used to get an approximate result but not the most correct one, although it works in many more cases than the newton method."
    ],
    "metadata": {
     "collapsed": false,
@@ -789,7 +830,7 @@
    "cell_type": "markdown",
    "source": [
     "#### Ex4\n",
-    "Let's combine both methods and use the strength of both"
+    "Let's combine both methods and use the strength of both in order to achieve the best possible results"
    ],
    "metadata": {
     "collapsed": false,
@@ -800,13 +841,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[120. 120.] (array([   119.33333333, -21095.13989197]), array([182014.33146124]))\n"
+      "[-0.70205996  0.62232015] (array([-0.74833549,  0.66332043]), array([-0.21232494]))\n"
      ]
     }
    ],
@@ -819,13 +860,27 @@
     "    return x_merit, x_end\n",
     "\n",
     "#test how far can we go\n",
-    "x_1, x_2 = combinedMethod(np.array([120, 120]), 5, 10, gradf, hessianf, h, gradh, hessianh)\n",
+    "x_1, x_2 = combinedMethod(np.array([-50, 100]), 5, 10, gradf, hessianf, h, gradh, hessianh)\n",
     "print(x_1, x_2)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In order to get the best results we decided to first use the merit optimiser so that we will get a good enough starting point and then use the newton descent method to get us the best possible result. We decided to use 5000 maximum steps for the Merit Optimiser and then just 100 steps for the Newton Optimiser.\n",
+    "\n",
+    "$(-0.70205996 , 0.62232015)$  are the results from the Merit Optimiser. We can see that it's very close to the wanted result. This is a very good starting point for the newton method. In the end, by using both methods we could achieve the expected results of   $(-0.74833549,  0.66332043)$  ."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
