started working on lab 6. Finished algorithms

--- a/project3/practical3All.ipynb
+++ b/project3/practical3All.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 65,
    "id": "ff3bd045",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -18,7 +21,10 @@
    "cell_type": "markdown",
    "id": "8466e8f9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### Ex 1.1\n",
@@ -29,7 +35,10 @@
    "cell_type": "markdown",
    "id": "76cbcf12",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Here we are computing the initial set of points."
@@ -40,7 +49,10 @@
    "execution_count": 66,
    "id": "8de8cbb2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -61,7 +73,10 @@
    "execution_count": 67,
    "id": "5b29f515",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -111,7 +126,10 @@
    "cell_type": "markdown",
    "id": "280af3bd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "These are the related points that we will work through this first exercise."
@@ -122,7 +140,10 @@
    "execution_count": 68,
    "id": "705d3b95",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -139,7 +160,10 @@
    "execution_count": 69,
    "id": "5f15e9d8",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -176,7 +200,10 @@
    "execution_count": 70,
    "id": "aded5302",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -198,7 +225,10 @@
    "execution_count": 71,
    "id": "bfb343c9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -256,7 +286,10 @@
    "cell_type": "markdown",
    "id": "57459406",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "The red line is the regression line that resulted from the gradient descent algorithm. We can see that it goes through the blue points at the correct angle, thus linear Regression with least squares as an error function works well for this set of points."
@@ -266,7 +299,10 @@
    "cell_type": "markdown",
    "id": "a008011e",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "### Ex1.2\n",
@@ -279,7 +315,10 @@
    "execution_count": 72,
    "id": "42b04f4e",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -301,7 +340,10 @@
    "execution_count": 73,
    "id": "6b29d00b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -364,7 +406,10 @@
    "cell_type": "markdown",
    "id": "c502ad0b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We can quite easily observe that the line is a bit to up than it should be, thus the impact of one outlier can be seen."
@@ -374,7 +419,10 @@
    "cell_type": "markdown",
    "id": "f0af409f",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Now, to further showcase the impact of the outlier points, we will change 3 other points to the following values\n",
@@ -388,7 +436,10 @@
    "execution_count": 74,
    "id": "fc5ec089",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -413,7 +464,10 @@
    "execution_count": 75,
    "id": "c4702be8",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -476,7 +530,10 @@
    "cell_type": "markdown",
    "id": "60510756",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We can very easily note that the magnitude by which those 3 points changed our regression line is huge. The importance of catching outliers is thus shown.\n"
@@ -486,7 +543,10 @@
    "cell_type": "markdown",
    "id": "2ca331c3",
    "metadata": {
-    "id": "-_DYKDDa7bw4"
+    "id": "-_DYKDDa7bw4",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Robust linear regression\n",
@@ -500,7 +560,10 @@
    "execution_count": 76,
    "id": "c49fda09",
    "metadata": {
-    "id": "VffTO9Av7bxD"
+    "id": "VffTO9Av7bxD",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -518,7 +581,10 @@
      "height": 265
     },
     "id": "sBKUMtcl7bxH",
-    "outputId": "a7859bad-1bbf-4f13-9fab-2224b20d8a3f"
+    "outputId": "a7859bad-1bbf-4f13-9fab-2224b20d8a3f",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -548,7 +614,10 @@
    "cell_type": "markdown",
    "id": "e83f2b49",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### 2.2\n",
@@ -567,7 +636,10 @@
    "cell_type": "markdown",
    "id": "90e41735",
    "metadata": {
-    "id": "u0fp8w-P7bxJ"
+    "id": "u0fp8w-P7bxJ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "\n",
@@ -594,7 +666,10 @@
    "execution_count": 78,
    "id": "1a530d0b",
    "metadata": {
-    "id": "VxjCkplc7bxK"
+    "id": "VxjCkplc7bxK",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -618,7 +693,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "kmQBXr3u7bxM",
-    "outputId": "5ff1df1c-e004-4fd7-9e75-02df38f4073f"
+    "outputId": "5ff1df1c-e004-4fd7-9e75-02df38f4073f",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -657,7 +735,10 @@
    "cell_type": "markdown",
    "id": "22c5e4ee",
    "metadata": {
-    "id": "uy9j41AkNv8Z"
+    "id": "uy9j41AkNv8Z",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### 2.3\n",
@@ -673,7 +754,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "tZVUunRuOavz",
-    "outputId": "a2915e46-786b-4274-b36d-16501425212e"
+    "outputId": "a2915e46-786b-4274-b36d-16501425212e",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -722,7 +806,10 @@
      "height": 427
     },
     "id": "H4ZbrMujOE9h",
-    "outputId": "5ad1beba-28aa-4114-dc98-627bd48a30a7"
+    "outputId": "5ad1beba-28aa-4114-dc98-627bd48a30a7",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -761,7 +848,10 @@
    "cell_type": "markdown",
    "id": "f69c1be2",
    "metadata": {
-    "id": "DVXxVWIBRw7N"
+    "id": "DVXxVWIBRw7N",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "From the plot we can observe that without outliers the obtained regression lines are very similar, in fact by looking at the plots in 2.1, the Cauchy and Least Squares functions assume similar values when they are close to zero, for this reason we expect to see a bigger variation when having several outliers.\n",
@@ -779,7 +869,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "e-frTdVRSe8y",
-    "outputId": "5bcd7bb8-752e-4444-aa6e-4ed7855bd0b2"
+    "outputId": "5bcd7bb8-752e-4444-aa6e-4ed7855bd0b2",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -810,7 +903,10 @@
      "height": 427
     },
     "id": "FTKuoXcNVwvP",
-    "outputId": "6772bb32-efcd-4c04-e909-c3dae2e5c852"
+    "outputId": "6772bb32-efcd-4c04-e909-c3dae2e5c852",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -849,7 +945,10 @@
    "cell_type": "markdown",
    "id": "517ba20a",
    "metadata": {
-    "id": "dXFJiMBSWLmD"
+    "id": "dXFJiMBSWLmD",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "As we can see from the plot, the difference between the two regression lines is quite big; the Cauchy error functin is way more robust against outliers, in fact nonetheless the presence of four outliers, it still gives a very good approximation of the behaviour of the dataset. \n",
@@ -861,7 +960,10 @@
    "cell_type": "markdown",
    "id": "252c4fe8",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### 2.5\n",
@@ -874,7 +976,10 @@
    "execution_count": 84,
    "id": "40e9f9ce",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -907,7 +1012,10 @@
    "cell_type": "markdown",
    "id": "463b1f22",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "For big $c$ the cauchy function is approximately the same as the standard parabel, thus we get nearly the same results too.\n",
@@ -921,7 +1029,10 @@
    "execution_count": 87,
    "id": "10f48cea",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -989,7 +1100,10 @@
    "cell_type": "markdown",
    "id": "29266abd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Let's look at the plots. First of all there is not that much of a difference for the different c's in the regression curve it self. But the error histograms show the difference between the used methods.\n",
@@ -1004,7 +1118,10 @@
     "#### 2.6"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1012,7 +1129,10 @@
    "execution_count": 86,
    "id": "000fa620",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1066,7 +1186,10 @@
    "cell_type": "markdown",
    "id": "6c676e76",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We add 5 new points to the already existing points with the previous outliers. All normally distributed around (0,0) and plot the results.\n",
@@ -1077,7 +1200,10 @@
    "cell_type": "markdown",
    "id": "b07f643e",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": []
   }
