added lab 5 and 6

--- a/project 5/proto5.ipynb
+++ b/project 5/proto5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import QPGC\n",
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "num_points_class1 = 50\n",
-    "num_points_class2 = 50\n",
+    "num_points_class1 = 2\n",
+    "num_points_class2 = 2\n",
     "k = 1"
    ],
    "metadata": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "class1 = np.array(np.random.multivariate_normal([0.,0.], [[1,-0.9],[-0.9,1]], num_points_class1))\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "nd = np.concatenate((class1, class2), axis=0)\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "total_points = num_points_class1+num_points_class2\n",
@@ -76,6 +76,38 @@
     "b = np.zeros(1)\n",
     "C = np.concatenate((np.diag(np.ones(total_points)), np.diag(-np.ones(total_points)))).T\n",
     "d = np.concatenate((np.zeros(total_points), (-1)*k*np.ones(total_points)))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4)\n",
+      "(4, 1)\n",
+      "(4, 8)\n",
+      "(4,)\n",
+      "(8,)\n",
+      "(1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(G.shape)\n",
+    "print(A.shape)\n",
+    "print(C.shape)\n",
+    "print(g.shape)\n",
+    "print(d.shape)\n",
+    "print(b.shape)"
    ],
    "metadata": {
     "collapsed": false,
@@ -331,11 +363,13 @@
     "def stoch_grad(epochs, w,b,lmb, gammas,xs,ys):          #gammas -> []*len(epochs)\n",
     "\n",
     "    randInds = list(range(len(ys)))\n",
+    "    history = []\n",
     "    for i in range(epochs):\n",
     "        np.random.shuffle(randInds)\n",
     "\n",
     "        for j in randInds:\n",
     "            w,b = step(w,b,gammas[i],xs[j],ys[j],lmb)\n",
+    "        history.append(np.log(f(xs, ys, lmb, w, b)))\n",
     "    return w,b\n"
    ],
    "metadata": {
